--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE HTML>
+
 <html>
 	<head>
 		<title>SIF</title>
@@ -15,7 +16,7 @@
 			<div id="overlay"></div>
 			<div id="main">
 
-				<!-- Header -->
+				<!-- Header --->
 					<header id="header">
 						<h1>Bienvenidos a SIF</h1>
 						<p>Sistema de Informacion el "Florero"</p>
