--- a/Contenido/Ingreso_f.html
+++ b/Contenido/Ingreso_f.html
@@ -48,7 +48,7 @@
 					</header>
 			</div>
 		</div>
-		<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+		<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]--->
 		<script>
 			window.onload = function() { document.body.className = ''; }
 			window.ontouchmove = function() { return false; }
